--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": "8.6.0"
-  }
-  "author": "DBZ",
+  "engines":{
+  "node": "8.6.0"
+    },
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2"
