--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec npm test"
   },
   "engines": {
     "node": "8.6.0",
@@ -17,5 +18,9 @@
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.12.1"
+  }
 }
